# chinese-chess

./: .gitignore  20260619_docker_tips.txt  20260621_issues.txt  Cargo.toml  README.md
chess-client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
chess-client/src/: style.css
chess-client/src/api/: index.ts  websocket.ts
chess-client/src/components/: ChessBoard.vue  ReplayControls.vue
chess-client/src/router/: index.ts
chess-client/src/stores/: game.ts  replay.ts  user.ts
chess-client/src/types/: index.ts
chess-client/src/utils/: chess.ts  sound.ts
chess-engine/: Cargo.toml
chess-engine/src/: lib.rs
chess-server/: .env.example  Cargo.toml
chess-server/migrations/: 20250101000000_init.sql  20250102000000_add_time_control.sql  20250103000000_add_increment_byoyomi.sql  20250620000000_create_game_events.sql  20250621000000_add_last_tick_at.sql  20250622000000_drop_move_history.sql
chess-server/src/: error.rs  main.rs
chess-server/src/config/: mod.rs
chess-server/src/db/: models.rs
chess-server/src/db/repositories/: game_repo.rs  mod.rs  user_repo.rs
chess-server/src/handlers/: ai_handler.rs  game_handler.rs  game_move_handler.rs  health_handler.rs  mod.rs  move_handler.rs  user_handler.rs  ws_handler.rs
chess-server/src/middleware/: auth.rs  mod.rs  rate_limit.rs
chess-server/src/services/: elo_service.rs  game_service.rs  mod.rs
chess-server/src/utils/: auth.rs  mod.rs  password.rs  validation.rs
chess-server/src/websocket/: client.rs  manager.rs  message.rs  mod.rs  room.rs
(+29 files in other folders)
